...
  Widget build(BuildContext context) {
    return new Scaffold(
      appBar: new AppBar(
        title: new Text("Add Project"),
      ),
      floatingActionButton: new FloatingActionButton(
          key: Key('add-project-button'),
          child: new Icon(
            Icons.send,
            color: Colors.white,
          ),
          onPressed: () {
            if (formState.currentState.validate()) {
...
                validator: (value) {
                  return value.isEmpty ? "Project name cannot be empty" : null;
                },
                onSaved: (value) {
                  projectName = value;
                },
                key: Key('add-project-field'),
              ),
            ),
            key: formState,
          ),
          new Padding(
            padding: const EdgeInsets.only(top: 4.0),
...
